# VisualLayerInspector

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build_all.bat  init.py  install.bat  menu.py
dist_files/: init.py  menu.py
python/: visual_layer_inspector.py
src/: InspectorDialog.cpp  InspectorDialog.h  VisualLayerInspector.cpp  exr_inspector.cpp  exr_inspector.h  visual_layer_inspector.py
